# translation

./: .gitignore  README.md  REFACTORING_SUMMARY.md  __init__.py  akashml.py  akashml_backup.py  batch.py  batch_akashml.py  batch_deepseek.py  chatgpt_batch.py  chatgpt_translate.py  config.py  deepseek.py  deepseek_nopdf.py  job.py  kaiti.pkl  merge_translated_files.py  ollama_local_qwen2.py  providers.py  pyproject.toml  r_test.py  requirements.txt  test.py  test_refactoring.py  text_processor.py  translator.py  utils.py
examples/: README.md  __init__.py  akash_llm.py  hyperbolic.py  ollama_local_qwen2.py
extractors/: __init__.py  base_extractor.py  epub_extractor.py  pdf_extractor.py  txt_extractor.py
test/: EPUB_ANALYSIS_REPORT.md  akash_llm.py  debug_epub.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_text_processor.py  test_utils.py
translation_app/: __init__.py
translation_app/cli/: __init__.py  batch.py  job.py  logging_setup.py  main.py  merge.py
translation_app/core/: __init__.py  config.py  file_analyzer.py  file_ops.py  path_utils.py  providers.py  translate_config.py  utils.py
translation_app/domain/: __init__.py  file_analyzer.py  file_merger.py  file_preprocessor.py  text_processor.py  translator.py
translation_app/domain/extractors/: __init__.py  base_extractor.py  epub_extractor.py  (+2 more)
translation_app/infra/: __init__.py  openai_client.py
translation_app/services/: __init__.py  batch_service.py  file_preprocessor.py  job_service.py  merge_service.py
