[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.0",
    "ebooklib>=0.18",
    "openai>=1.0.0",
    "pypdf2>=3.0.0",
    "requests>=2.28.0",
    "retry>=0.9.2",
]

[project.scripts]
translate = "translation_app.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["translation_app*"]
exclude = ["files*", "examples*"]
